Update for search function

--- a/env.template
+++ b/env.template
@@ -1,13 +1,12 @@
 # Google Custom Search API Configuration
-# Copy this file to .env.local and fill in your actual values
-
-# Your Google Custom Search API Key (from Google Cloud Console)
-# Format: AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-GOOGLE_CUSTOM_SEARCH_API_KEY=your_api_key_here
-
-# Your Google Custom Search Engine ID (from Programmable Search Engine)
-# Format: 123456789012345678
+GOOGLE_CUSTOM_SEARCH_API_KEY=your_google_custom_search_api_key_here
 GOOGLE_CUSTOM_SEARCH_ENGINE_ID=your_search_engine_id_here
 
-# Optional: OpenAI API Key for enhanced content analysis
-# OPENAI_API_KEY=your_openai_api_key_here
+# Google Cloud Text-to-Speech API Configuration
+GOOGLE_CLOUD_API_KEY=your_google_cloud_api_key_here
+
+# OpenAI API Configuration (Optional - for enhanced content analysis)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Gemini AI Configuration (Optional - alternative AI provider)
+# Note: Uses the same GOOGLE_CLOUD_API_KEY as Text-to-Speech
