--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/node": "24.3.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.2.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "postcss": "^8",
